ref[README]: README

--- a/tareas.json
+++ b/tareas.json
@@ -1,101 +1,57 @@
 [
     {
-        "id": 1748889245.270146,
-        "titulo": "Aprobar",
-        "descripcion": "Hay que coger 3",
-        "categoria": "Escuela",
-        "carpeta": "QueHaceres",
-        "fecha_creacion": "2025-06-02T14:34:05.270146",
-        "fecha_vencimiento": "2025-06-02 14:36",
+        "id": 1756848000.123456,
+        "titulo": "Estudiar para la certificacion",
+        "descripcion": "Repasar los temas de redes y seguridad.",
+        "categoria": "Estudios",
+        "carpeta": "Certificaciones",
+        "fecha_creacion": "2025-06-02 08:00",
+        "fecha_vencimiento": "2025-06-05 18:00",
         "completada": false,
-        "recordatorio": 1
+        "recordatorio": 120
     },
     {
-        "id": 1748889678.27513,
-        "titulo": "Pinga de Mono",
-        "descripcion": "No hay na",
-        "categoria": "Culos duros",
-        "carpeta": "Saborit",
-        "fecha_creacion": "2025-06-02T14:41:18.275130",
-        "fecha_vencimiento": "2025-06-02 14:44",
+        "id": 1756934400.654321,
+        "titulo": "Reunion con el cliente",
+        "descripcion": "Presentar avances del proyecto y recibir retroalimentacion.",
+        "categoria": "Trabajo",
+        "carpeta": "Proyectos",
+        "fecha_creacion": "2025-06-03 10:00",
+        "fecha_vencimiento": "2025-06-03 15:00",
         "completada": false,
-        "recordatorio": 1
+        "recordatorio": 30
     },
     {
-        "id": 1748889941.531142,
-        "titulo": "XXX",
-        "descripcion": "XXX",
-        "categoria": "XXX",
-        "carpeta": "XXX",
-        "fecha_creacion": "2025-06-02T14:45:41.531142",
-        "fecha_vencimiento": "2025-06-02 14:50",
+        "id": 1762128000.789012,
+        "titulo": "Renovar licencia de conducir",
+        "descripcion": "Ir al centro de licencias para renovar el documento.",
+        "categoria": "Personal",
+        "carpeta": "Tramites",
+        "fecha_creacion": "2025-08-01 09:00",
+        "fecha_vencimiento": "2025-08-10 12:00",
         "completada": false,
-        "recordatorio": 2
+        "recordatorio": 1440
     },
     {
-        "id": 1748890254.368844,
-        "titulo": "YYY",
-        "descripcion": "YYY",
-        "categoria": "YYY",
-        "carpeta": "YYY",
-        "fecha_creacion": "2025-06-02T14:50:54.368844",
-        "fecha_vencimiento": "2025-06-02 14:55",
+        "id": 1769817600.345678,
+        "titulo": "Planificar vacaciones",
+        "descripcion": "Buscar destinos y reservar alojamiento.",
+        "categoria": "Ocio",
+        "carpeta": "Viajes",
+        "fecha_creacion": "2025-11-01 14:00",
+        "fecha_vencimiento": "2025-11-15 20:00",
         "completada": false,
-        "recordatorio": 1
+        "recordatorio": 720
     },
     {
-        "id": 1748890282.007199,
-        "titulo": "III",
-        "descripcion": "III",
-        "categoria": "III",
-        "carpeta": "III",
-        "fecha_creacion": "2025-06-02T14:51:22.007199",
-        "fecha_vencimiento": "2025-06-02 14:53",
+        "id": 1777603200.987654,
+        "titulo": "Actualizar curriculum vitae",
+        "descripcion": "Agregar experiencia reciente y proyectos destacados.",
+        "categoria": "Trabajo",
+        "carpeta": "Documentos",
+        "fecha_creacion": "2026-02-01 10:00",
+        "fecha_vencimiento": "2026-02-05 18:00",
         "completada": false,
-        "recordatorio": 1
-    },
-    {
-        "id": 1748890742.775153,
-        "titulo": "JJ",
-        "descripcion": "JJ",
-        "categoria": "JJ",
-        "carpeta": "JJ",
-        "fecha_creacion": "2025-06-02T14:59:02.775153",
-        "fecha_vencimiento": "2025-06-02 15:00",
-        "completada": false,
-        "recordatorio": 1
-    },
-    {
-        "id": 1748891196.297035,
-        "titulo": "KK",
-        "descripcion": "KK",
-        "categoria": "KK",
-        "carpeta": "KK",
-        "fecha_creacion": "2025-06-02T15:06:36.297035",
-        "fecha_vencimiento": "2025-06-02 15:08",
-        "completada": false,
-        "recordatorio": 1
-    },
-    {
-        "id": 1748891683.871511,
-        "titulo": "GG",
-        "descripcion": "GG",
-        "categoria": "GG",
-        "carpeta": "GG",
-        "fecha_creacion": "2025-06-02T15:14:43.871511",
-        "fecha_vencimiento": "2025-06-02 15:16",
-        "completada": false,
-        "recordatorio": 1
-    },
-    {
-        "id": 1748891869.324671,
-        "titulo": "FF",
-        "descripcion": "FF",
-        "categoria": "FF",
-        "carpeta": "FF",
-        "fecha_creacion": "2025-06-02T15:17:49.324671",
-        "fecha_vencimiento": "2025-06-02 15:19",
-        "completada": false,
-        "recordatorio": 1
+        "recordatorio": 60
     }
 ]
